added search functionality
